config github actions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,10 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
+        <a href="/" class="text-noir font-titre">À PROPOS</a>
+        <a href="/competences/">COMPÉTENCES</a>
+        <a href="/realisations/">RÉALISATIONS</a>
+        <a href="/contact/">CONTACT</a>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
