--- a/src/pages/competences.astro
+++ b/src/pages/competences.astro
@@ -50,10 +50,13 @@
     <script>
         const btn = document.querySelector("button.mobile-menu-button");
         const menu = document.querySelector(".mobile-menu");
-
-        btn.addEventListener("click", () => {
-        menu.classList.toggle("hidden");
-        });
+        if (btn) {
+            btn.addEventListener("click", () => {
+                if (menu) {
+                    menu.classList.toggle("hidden");
+                }
+            });
+        }
     </script>
 </body>
 </html>
