--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,48 @@
     <meta charset="UTF-8">
     <title>À propos</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        .fade-in {
+            animation: fadeIn 1s ease-out;
+        }
+    </style>
+    <script>
+        const btn = document.querySelector("button.mobile-menu-button");
+        const menu = document.querySelector(".mobile-menu");
+        if (btn) {
+            btn.addEventListener("click", () => {
+                if (menu) {
+                    menu.classList.toggle("hidden");
+                }
+            });
+        }
+    </script>
 </head>
 <body class="bg-blanc">
     <nav>
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
-                <div class="flex-1 flex justify-center space-x-7">
+                <div class="flex-1 flex justify-center space-x-7 mt-10">
                     <div class="hidden md:flex items-center space-x-4">
-                        <a href="/" class="py-4 px-2 text-noir font-semibold hover:text-blue-500 transition duration-300 font-titre">À PROPOS</a>
-                        <a href="/competences/" class="py-4 px-2 text-noir font-semibold hover:text-blue-500 transition duration-300 font-titre">COMPÉTENCES</a>
-                        <a href="/realisations/" class="py-4 px-2 text-noir font-semibold hover:text-blue-500 transition duration-300 font-titre">RÉALISATIONS</a>
-                        <a href="/contact/" class="py-4 px-2 text-noir font-semibold hover:text-blue-500 transition duration-300 font-titre">CONTACT</a>
+                        <a href="/" class="py-4 px-2 text-noir font-semibold hover:text-gray-700 transition duration-300 font-titre">À PROPOS</a>
+                        <a href="/competences/" class="py-4 px-2 text-noir font-semibold hover:text-gray-700 transition duration-300 font-titre">COMPÉTENCES</a>
+                        <a href="/realisations/" class="py-4 px-2 text-noir font-semibold hover:text-gray-700 transition duration-300 font-titre">RÉALISATIONS</a>
+                        <a href="/contact/" class="py-4 px-2 text-noir font-semibold hover:text-gray-700 transition duration-300 font-titre">CONTACT</a>
                     </div>
                 </div>
                 <div class="md:hidden flex items-center justify-end">
                     <button class="outline-none mobile-menu-button">
-                        <svg class="w-10 h-10 text-noir hover:text-blue-500" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+                        <svg class="w-10 h-10 text-noir hover:text-gray-700" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                             <path d="M4 6h16M4 12h16m-7 6h7"></path>
                         </svg>
                     </button>
@@ -37,26 +63,10 @@
         </div>
     </nav>
     
-
-
-    <section>
-        <img src="/Déco.svg" alt="" class="flex ml-72 mb-6">
-        <div class="flex justify-center items-center h-screen">
-            <img src="/Portfolio.svg" alt="" class="flex">
-        </div>
-        <h2 class="flex justify-end text-noir font-noir text-3xl">LEGER Joris</h2>
+    <section class="flex justify-center items-center h-screen flex-col fade-in px-4">
+        <img src="/Déco.svg" alt="" class=" w-24 md:w-36">
+        <img src="/Portfolio.svg" alt="" class=" w-48 md:w-7/12">
+        <h2 class="text-noir font-titre text-2xl md:text-xl">LEGER Joris</h2>
     </section>
-
-    <script>
-        const btn = document.querySelector("button.mobile-menu-button");
-        const menu = document.querySelector(".mobile-menu");
-        if (btn) {
-            btn.addEventListener("click", () => {
-        if (menu) {
-            menu.classList.toggle("hidden");
-        }
-        });
-    }
-    </script>
 </body>
 </html>
