--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,5 +68,28 @@
         <img src="/Portfolio.svg" alt="" class=" w-48 md:w-7/12">
         <h2 class="text-noir font-titre text-2xl md:text-xl">LEGER Joris</h2>
     </section>
+    <section>
+        <div class="bg-noir">
+            <div class="flex items-center justify-center h-screen">
+              <div class="w-96 h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
+                <div class="bg-blanc p-3 flex items-center justify-between">
+                  <div class="flex space-x-2">
+                    <span class="w-3 h-3 bg-red-500 rounded-full"></span>
+                    <span class="w-3 h-3 bg-yellow-400 rounded-full"></span>
+                    <span class="w-3 h-3 bg-green-500 rounded-full"></span>
+                  </div>
+                </div>
+                <div class="flex-grow">
+                  <img src="public/192540418d129c8ca02c63a35bf70317.jpg" class="w-full h-full object-cover">
+                </div>
+              </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h1>À PROPOS</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
