--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,7 +68,7 @@
         <img src="/Portfolio.svg" alt="" class=" w-48 md:w-7/12">
         <h2 class="text-noir font-titre text-2xl md:text-xl">LEGER Joris</h2>
     </section>
-    <section class="bg-noir">
+    <section class="flex grid-flow-col bg-noir justify-center items-center gap-20">
             <div class="flex items-center justify-center h-screen">
               <div class="w-96 h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
                 <div class="bg-blanc p-3 flex items-center justify-between">
@@ -84,8 +84,9 @@
               </div>
             </div>
             <div>
-                <div>
-                    <h1>À PROPOS</h1>
+                <div class="flex flex-row justify-center items-center">
+                    <h1 class=" text-blanc text-3xl font-semibold font-titre">À PROPOS</h1>
+                    <img src="/Déco.svg" alt="" class=" w-24 md:w-36">
                 </div>
             </div>
     </section>
