--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,9 +73,9 @@
               <div class="w-96 h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
                 <div class="bg-blanc p-3 flex items-center justify-between">
                   <div class="flex space-x-2">
-                    <span class="w-3 h-3 bg-red-500 rounded-full"></span>
-                    <span class="w-3 h-3 bg-yellow-400 rounded-full"></span>
-                    <span class="w-3 h-3 bg-green-500 rounded-full"></span>
+                    <span class="w-3 h-3 bg-rouge rounded-full"></span>
+                    <span class="w-3 h-3 bg-jaune rounded-full"></span>
+                    <span class="w-3 h-3 bg-vert rounded-full"></span>
                   </div>
                 </div>
                 <div class="flex-grow">
