menu burger link scroll

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,8 @@
     
         <div class="hidden mobile-menu">
             <ul class="">
-                <li><a href="#a_propos" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre">À PROPOS</a></li>
-                <li><a href="#competences" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre">COMPÉTENCES</a></li>
+                <li><a href="#a_propos" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">À PROPOS</a></li>
+                <li><a href="#competences" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">COMPÉTENCES</a></li>
                 <li><a href="/realisations/" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre">RÉALISATIONS</a></li>
                 <li><a href="/contact/" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre">CONTACT</a></li>
             </ul>
