--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import "../styles/global.css";
                         <a href="#a_propos" class=" px-2 font-semibold transition duration-300 font-titre scroll-link">À PROPOS</a>
                         <a href="#competences" class=" px-2 font-semibold transition duration-300 font-titre scroll-link">COMPÉTENCES</a>
                         <a href="#realisations" class=" px-2 font-semibold transition duration-300 font-titre scroll-link">RÉALISATIONS</a>
-                        <a href="#contact" class=" px-2 font-semibold transition duration-300 font-titre">CONTACT</a>
+                        <a href="#contact" class=" px-2 font-semibold transition duration-300 font-titre scroll-link">CONTACT</a>
                     </div>
                 </div>
                 <div class="md:hidden flex items-center justify-end">
@@ -37,7 +37,7 @@ import "../styles/global.css";
                 <li><a href="#a_propos" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">À PROPOS</a></li>
                 <li><a href="#competences" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">COMPÉTENCES</a></li>
                 <li><a href="#realisations" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">RÉALISATIONS</a></li>
-                <li><a href="#contact" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre">CONTACT</a></li>
+                <li><a href="#contact" class="block text-sm px-2 py-4 text-noir hover:bg-gray-200 transition duration-300 font-titre scroll-link">CONTACT</a></li>
             </ul>
         </div>
     </nav>
@@ -47,7 +47,7 @@ import "../styles/global.css";
         <img src="/Portfolio.svg" alt="Portfolio" class="w-48 md:w-7/12" width="336" height="336" loading="lazy">
         <h2 class="text-noir font-titre text-base md:text-2xl">LEGER Joris</h2>
     </section>
-
+    
     <section id="a_propos" class="flex flex-col md:grid md:grid-flow-col bg-noir justify-center items-center gap-20 px-4 md:px-72 md:h-screen">
         <div class="flex items-center justify-center h-full md:h-screen px-4 order-2 md:order-1">
             <div class="w-full md:w-full h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
@@ -149,37 +149,29 @@ import "../styles/global.css";
         </div>
     </section>
 
-    <section id="" class="flex flex-col md:grid md:grid-flow-col bg-noir justify-center items-center gap-20 px-4 md:px-72 md:h-screen">
-        <div class="mt-10 px-4">
-            <div class="flex flex-row justify-between items-center gap-10 mb-10">
-                <h1 class="text-blanc text-3xl font-semibold font-titre">RÉALISATIONS</h1>
-                <img src="/Déco-B.svg" alt="Décoration" class="w-24 md:w-36" width="144" height="144" loading="lazy">
-            </div>
-            <div class="mb-5">
-                <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div class="mb-10">
-                <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+    <section id="contact" class="flex justify-center items-center px-4 md:px-20 py-10 md:h-screen bg-noir">
+        <div class="w-full max-w-4xl grid grid-cols-1 gap-6 md:grid-cols-2">
+          <div>
+            <label for="fullName" class="block text-blanc font-medium text-lg font-titre mb-2">Nom et Prénom</label>
+            <input type="text" id="fullName" class="bg-blanc w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-pink-500" required>
+          </div>
+          <div>
+            <label for="email" class="block text-blanc font-medium text-lg font-titre mb-2">Adresse Mail</label>
+            <input type="email" id="email" class=" bg-blanc w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-pink-500" required>
+          </div>
+          <div class="md:col-span-2">
+            <label for="message" class="block text-blanc font-medium text-lg font-titre mb-2">Message</label>
+            <textarea id="message" rows="4" class="bg-blanc w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-offset-2 focus:ring-2 focus:ring-"></textarea>
+          </div>
+          <div class="md:col-span-2 flex justify-center">
+            <a href="#" type="submit" class="flex justify-center items-center w-48 p-2 rounded-lg bg-noir border-2 hover:bg-blanc text-blanc hover:text-noir font-semibold font-titre transition">Envoyer</a>
+          </div>
         </div>
-        <div class="flex flex-col items-start justify-center h-full px-4 gap-10 mb-5 md:h-screen">
-            <div class="w-full md:w-96 h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
-                <div class="bg-blanc p-3 flex items-center justify-between">
-                    <div class="flex space-x-2">
-                        <span class="w-3 h-3 bg-red-500 rounded-full"></span>
-                        <span class="w-3 h-3 bg-yellow-500 rounded-full"></span>
-                        <span class="w-3 h-3 bg-green-500 rounded-full"></span>
-                    </div>
-                </div>
-                <div class="flex-grow">
-                    <img src="/free-nature-images.jpg" alt="Nature" class="w-full h-full object-cover" width="600" height="400" loading="lazy">
-                </div>
-            </div>
-            <div>
-                <a href="#" class="flex justify-center items-center w-48 p-2 rounded-lg bg-noir border-2 hover:bg-blanc text-blanc hover:text-noir font-semibold font-titre">Voir plus</a>
-            </div>
-        </div>
-    </section>
+      </section>
+      <footer class="bg-blanc w-auto h-28 grid grid-flow-col">
+
+      </footer>
+      
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -220,7 +212,7 @@ import "../styles/global.css";
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
                         if (entry.isIntersecting) {
-                            if (entry.target.id === 'a_propos' || entry.target.id === 'competences') {
+                            if (entry.target.id === 'a_propos' || entry.target.id === 'competences' || entry.target.id === 'contact') {
                                 navbar.classList.remove('text-noir');
                                 navbar.classList.add('text-blanc');
                             } else {
